--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,60 @@
 absl-py==0.9.0
+appdirs==1.4.3
 asn1crypto==1.3.0
 astor==0.8.0
+astroid==2.3.3
 beautifulsoup4==4.8.2
 certifi==2019.11.28
 cffi==1.14.0
+cfgv==3.1.0
 chardet==3.0.4
+click==7.1.1
 cryptography==2.8
 cycler==0.10.0
 DAWG-Python==0.7.2
+distlib==0.3.0
 docopt==0.6.2
+filelock==3.0.12
 gast==0.2.2
 google-pasta==0.1.8
+googletrans==2.4.0
+graphviz==0.13.2
 grpcio==1.16.1
 h5py==2.10.0
+httplib2==0.17.1
+identify==1.4.11
 idna==2.8
-inexactsearch==1.0.2
+importlib-metadata==1.5.0
+isort==4.3.21
 joblib==0.14.1
 Keras==2.3.1
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.0
 kiwisolver==1.1.0
 langdetect==1.0.8
+lazy-object-proxy==1.4.3
 lxml==4.5.0
 Markdown==3.1.1
 matplotlib==3.1.3
+mccabe==0.6.1
 mkl-fft==1.0.15
 mkl-random==1.1.0
 mkl-service==2.3.0
 nltk==3.4.5
+nodeenv==1.3.5
 numpy==1.18.1
 opt-einsum==3.1.0
+packaging==20.3
 pandas==1.0.1
 Pillow==7.0.0
+plantuml==0.3.0
+pluggy==0.13.1
+pre-commit==2.2.0
 protobuf==3.11.4
+py==1.8.1
 pycld2==0.41
 pycparser==2.19
+pylint==2.4.4
 pymorphy2==0.8
 pymorphy2-dicts==2.4.393442.3710985
 pymorphy2-dicts-ru==2.4.404381.4453942
@@ -49,16 +69,21 @@ PyYAML==5.3
 requests==2.23.0
 scikit-learn==0.22.1
 scipy==1.4.1
-silpa-common==0.3
 six==1.14.0
-soundex==1.1.3
 soupsieve==1.9.5
-spellchecker==0.4
+symspellpy==6.5.2
 tensorboard==2.0.0
 tensorflow==2.0.0
 tensorflow-estimator==2.0.0
 termcolor==1.1.0
+toml==0.10.0
 tornado==6.0.3
+tox==3.14.5
+translate==3.5.0
+translator==0.0.9
+typed-ast==1.4.1
 urllib3==1.25.8
+virtualenv==20.0.10
 Werkzeug==1.0.0
 wrapt==1.11.2
+zipp==3.1.0
